force-app/main/default/objects/cazoomi__List_Member_Contact__c/cazoomi__List_Member_Contact__c.object-meta.xml
<CustomObject>
    <description>This custom object is used to store the contact members of marketing list</description>
    <label>List Members - Contact</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>