force-app/main/default/objects/cazoomi__List_Member_Contact__c/fields/cazoomi__Contact__c.field-meta.xml
<CustomField>
    <fullName>cazoomi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Lists</relationshipLabel>
    <relationshipName>List_Members_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>