force-app/main/default/objects/cazoomi__List_Member_Contact__c/fields/cazoomi__Email__c.field-meta.xml
<CustomField>
    <fullName>cazoomi__Email__c</fullName>
    <formula>cazoomi__Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>