force-app/main/default/objects/cazoomi__List_Member_Contact__c/fields/cazoomi__Marketing_List__c.field-meta.xml
<CustomField>
    <fullName>cazoomi__Marketing_List__c</fullName>
    <label>Marketing List</label>
    <referenceTo>cazoomi__Marketing_List__c</referenceTo>
    <relationshipLabel>List Members - Contact</relationshipLabel>
    <relationshipName>List_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>